--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/node": "8.10.45",
-    "typescript": "^3.3.3333",
-    "ts-node": "^8.1.0",
-    "aws-cdk": "^1.4.0"
+    "@types/node": "14.14.37",
+    "aws-cdk": "^1.96.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3"
   },
   "dependencies": {
-    "@aws-cdk/aws-cloudfront": "^1.4.0",
-    "@aws-cdk/aws-s3": "^1.4.0",
-    "@aws-cdk/core": "^1.4.0",
-    "source-map-support": "^0.5.9"
+    "@aws-cdk/aws-cloudfront": "^1.96.0",
+    "@aws-cdk/aws-s3": "^1.96.0",
+    "@aws-cdk/core": "^1.96.0",
+    "source-map-support": "^0.5.19"
   }
 }
